--- a/TobiiMVVM/packages.config
+++ b/TobiiMVVM/packages.config
@@ -12,5 +12,7 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
+  <package id="Tobii.Interaction" version="0.7.3" targetFramework="net472" />
+  <package id="Tobii.Research.x64" version="1.8.0.1108" targetFramework="net48" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
